# arlekin-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
crates/client/: Cargo.toml  index.html
crates/client/src/: app.rs  main.rs  route.rs
crates/client/src/account/: dashboard.rs  login.rs  register.rs
crates/client/src/helpers/: get_by_id.rs
crates/client/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  not_found.rs  register.rs
