[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Crypto"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
wasm-bindgen-futures = "0.4.47"
