[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Crypto"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.47"
argon2 = "0.5.3"
serde_json = "1.0.133"
hex = "0.4.3"