[package]
name = "arlekin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew.workspace = true
yew-router.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
reqwest.workspace = true
serde.workspace = true
argon2.workspace = true
wasm-bindgen-futures.workspace = true
serde_json.workspace = true
hex.workspace = true
